Fixed overflow in sidebar body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,6 +54,7 @@ h6 {
         height: 100%;
         background-color: #224b7a;
         border-right: 1px solid #152f4d;
+        overflow-y: auto;
 
         a, a:hover, a:focus {
             color: inherit;
